--- a/python/src/PiecewiseLinearEvaluation_doc.i.in
+++ b/python/src/PiecewiseLinearEvaluation_doc.i.in
@@ -12,6 +12,11 @@ See also
 --------
 PiecewiseHermiteEvaluation
 
+Notes
+-----
+The evaluation returns constant values for data outside the bounds of the design of experiments.
+Thus, the approximation should not be used outside the range of the design of experiments.
+
 Examples
 --------
 >>> import openturns as ot
@@ -21,3 +26,55 @@ Examples
 >>> f = ot.Function(evaluation)
 >>> print(f([2.5]))
 [1.5]"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::PiecewiseLinearEvaluation::getLocations
+"Accessor to the locations.
+
+Returns
+-------
+locations : :class:`~openturns.Point`
+    Locations."
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::PiecewiseLinearEvaluation::getValues
+"Accessor to the values.
+
+Returns
+-------
+values : :class:`~openturns.Sample`
+    Values of the function at the locations."
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::PiecewiseLinearEvaluation::setLocations
+"Accessor to the locations.
+
+Parameters
+----------
+locations : :class:`~openturns.Point`
+    Locations."
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::PiecewiseLinearEvaluation::setValues
+"Accessor to the values.
+
+Parameters
+----------
+values : :class:`~openturns.Sample`
+    Values of the function at the locations."
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::PiecewiseLinearEvaluation::setLocationsAndValues
+"Accessor to the locations and values.
+
+Parameters
+----------
+locations : :class:`~openturns.Point`
+    Locations.
+values : :class:`~openturns.Sample`
+    Values of the function at the locations."
