FejerAlgorithm: Move to /Uncertainty

--- a/lib/src/Uncertainty/Algorithm/CMakeLists.txt
+++ b/lib/src/Uncertainty/Algorithm/CMakeLists.txt
@@ -3,8 +3,10 @@
 # Register current directory files
 ot_add_current_dir_to_include_dirs ()
 
+ot_add_source_file (FejerAlgorithm.cxx)
 ot_add_source_file (TaylorExpansionMoments.cxx)
 
+ot_install_header_file (FejerAlgorithm.hxx)
 ot_install_header_file (TaylorExpansionMoments.hxx)
 
 ot_install_header_file (OTAlgorithm.hxx)
