ParametrizedDistribution: Add parameters accessor
Closes #2858

--- a/python/src/ParametrizedDistribution_doc.i.in
+++ b/python/src/ParametrizedDistribution_doc.i.in
@@ -30,3 +30,13 @@ Create the distribution:
 Draw a sample:
 
 >>> sample = distribution.getSample(5)"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::ParametrizedDistribution::getDistributionParameters
+"Get the distribution parameters.
+
+Returns
+-------
+parameters : :class:`~openturns.DistributionParameters`
+    Parameters of the distribution to be created."
