Modification of test by try/catch

--- a/python/src/Analytical_doc.i.in
+++ b/python/src/Analytical_doc.i.in
@@ -7,6 +7,11 @@ nearestPointAlgorithm : :class:`~openturns.OptimizationAlgorithm`
     Optimization algorithm used to search the design point.
 event : :class:`~openturns.RandomVector`
     Failure event.
+physicalStartingPoint : sequence of float
+    Starting point of the optimization algorithm, declared in the physical
+    space (in case of single-start algoritm). In case of multi-start algorithm,
+    the starting points are directly defined in nearestPointAlgorithm in the 
+    Standard Space.
 
 Notes
 -----
