--- a/python/src/Analytical_doc.i.in
+++ b/python/src/Analytical_doc.i.in
@@ -9,7 +9,7 @@ event : :class:`~openturns.RandomVector`
     Failure event.
 physicalStartingPoint : sequence of float
     Starting point of the optimization algorithm, declared in the physical
-    space (in case of single-start algoritm). In case of multi-start algorithm,
+    space (in case of single-start algorithm). In case of multi-start algorithm,
     the starting points are directly defined in nearestPointAlgorithm in the 
     Standard Space.
 
