--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -549,14 +549,19 @@ if (BUILD_PYTHON)
     endif ()
   endif ()
 
-  if (CMAKE_VERSION VERSION_LESS 3.26)
+  if (CMAKE_VERSION VERSION_LESS 3.18)
     find_package (Python 3.6 COMPONENTS Interpreter Development)
+    if (NOT TARGET Python::Module)
+      include (TargetLinkLibrariesWithDynamicLookup)
+    endif ()
   else ()
-    find_package (Python 3.6 COMPONENTS Interpreter Development.Module Development.SABIModule)
-  endif ()
-
-  if (NOT TARGET Python::Module)
-    include (TargetLinkLibrariesWithDynamicLookup)
+    option (USE_PYTHON_SABI "Use Python stable ABI" OFF)
+    if (USE_PYTHON_SABI AND CMAKE_VERSION VERSION_GREATER_EQUAL 3.26)
+      find_package (Python 3.6 COMPONENTS Interpreter Development.SABIModule)
+      add_library (Python::Module ALIAS Python::SABIModule)
+    else ()
+      find_package (Python 3.6 COMPONENTS Interpreter Development.Module)
+    endif ()
   endif ()
 
   if (Python_FOUND)
