SymbolicFunction: Reword parser description

--- a/python/src/SymbolicFunction_doc.i.in
+++ b/python/src/SymbolicFunction_doc.i.in
@@ -71,11 +71,9 @@ Available constants:
 
 Notes
 -----
-
-Up to version 1.10, OpenTURNS relied on `muParser <https://beltoforion.de/en/muparser/>`_
-to parse analytical formulas. Since version 1.11, `ExprTk <http://www.partow.net/programming/exprtk/>`_
-is used by default, but both parsers can be used if their support have been compiled.
-This is controlled by the `SymbolicParser-Backend` :class:`~openturns.ResourceMap` entry.
+The library relies on the `ExprTk <http://www.partow.net/programming/exprtk/>`_ parser,
+but it can also use the legacy `muParser <https://beltoforion.de/en/muparser/>`_ parser if enabled,
+this is controlled by the `SymbolicParser-Backend` :class:`~openturns.ResourceMap` entry.
 
 Examples
 --------
