--- a/lib/src/Uncertainty/Algorithm/Simulation/CMakeLists.txt
+++ b/lib/src/Uncertainty/Algorithm/Simulation/CMakeLists.txt
@@ -25,6 +25,7 @@ ot_add_source_file (Wilks.cxx)
 ot_add_source_file (SubsetSamplingResult.cxx)
 ot_add_source_file (SubsetSampling.cxx)
 ot_add_source_file (QuadrantSampling.cxx)
+ot_add_source_file (QuantileConfidence.cxx)
 ot_add_source_file (AdaptiveDirectionalStratification.cxx)
 ot_add_source_file (ProbabilitySimulationAlgorithm.cxx)
 ot_add_source_file (ExpectationSimulationAlgorithm.cxx)
@@ -61,6 +62,7 @@ ot_install_header_file (EventSimulation.hxx)
 ot_install_header_file (SubsetSamplingResult.hxx)
 ot_install_header_file (SubsetSampling.hxx)
 ot_install_header_file (QuadrantSampling.hxx)
+ot_install_header_file (QuantileConfidence.hxx)
 ot_install_header_file (AdaptiveDirectionalStratification.hxx)
 ot_install_header_file (ProbabilitySimulationAlgorithm.hxx)
 ot_install_header_file (ExpectationSimulationAlgorithm.hxx)
