--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -715,6 +715,7 @@ ot_pyinstallcheck_test (OrthogonalProductPolynomialFactory_std)
 ot_pyinstallcheck_test (OrthogonalProductFunctionFactory_std)
 
 ## Algorithm
+ot_pyinstallcheck_test (QuantileConfidence_std IGNOREOUT)
 ot_pyinstallcheck_test (TaylorExpansionMoments_std)
 
 ## Analytical
