--- a/python/src/Ipopt_doc.i.in
+++ b/python/src/Ipopt_doc.i.in
@@ -35,50 +35,29 @@ Examples
 --------
 The code below ensures the optimization of the following problem:
 
-.. math:: min \left( - x_0 - x_1 - x_2 \right)
+.. math:: min \left( - (x_2-2)^2 \right)
 
 subject to
 
 .. math::
 
-    \left(x_1 - \frac{1}{2}\right)^2 + \left(x_2 - \frac{1}{2}\right)^2 \leq \frac{1}{4}
+    x_1 \times x_1 + x_2 = 1
 
-    x_0 - x_1 \leq 0
+    x_1 \in (-1, 1)
 
-    x_0 + x_2 + x_3 \leq 2
-
-    x_0 \in \{0,1\}^n
-
-    (x_1, x_2) \in \mathbb{R}^2
-
-    x_3 \in \mathbb{N}
+    x_2 \in \mathbb{R}
 
 
 >>> import openturns as ot
-
->>> # Definition of objective function
->>> objectiveFunction = ot.SymbolicFunction(['x0','x1','x2','x3'], ['-x0 -x1 -x2'])
-
->>> # Definition of variables bounds
->>> bounds = ot.Interval([0,0,0,0],[1,1e308,1e308,5],[True,True,True,True],[True,False,False,True])
-
-Inequality constraints are defined by a function :math:`h` such that :math:`h(x) \geq 0`. The inequality expression above has to be modified to match this formulation.
-
->>> # Definition of constraints
->>> h = ot.SymbolicFunction(['x0','x1','x2','x3'], ['-(x1-1/2)^2 - (x2-1/2)^2 + 1/4', '-x0 + x1', '-x0 - x2 - x3 + 2'])
-
->>> # Setting up Ipopt problem
->>> problem = ot.OptimizationProblem(objectiveFunction)
+>>> objective = ot.SymbolicFunction(['x1','x2'], ['-(x2 - 2.0)^2'])
+>>> bounds = ot.Interval([-1, -1e19], [1, 1e19])
+>>> g = ot.SymbolicFunction(['x1','x2'], ['-(x1 * x1 + x2 - 1.0)'])
+>>> problem = ot.OptimizationProblem(objective)
 >>> problem.setBounds(bounds)
->>> problem.setInequalityConstraint(h)
+>>> problem.setEqualityConstraint(g)
 
 >>> algo = ot.Ipopt(problem)
->>> algo.setStartingPoint([0,0,0,0])
->>> algo.setMaximumCallsNumber(1000)
->>> algo.setMaximumIterationNumber(1000)
->>> algo.setMaximumTimeDuration(5.0)
-
->>> # Running the solver
+>>> algo.setStartingPoint([0.5, 1.5])
 >>> algo.run() # doctest: +SKIP
 
 >>> # Retrieving the results
