--- a/python/src/PostAnalyticalImportanceSampling_doc.i.in
+++ b/python/src/PostAnalyticalImportanceSampling_doc.i.in
@@ -27,7 +27,8 @@ Examples
 >>> Y = ot.CompositeRandomVector(f, X)
 >>> event = ot.ThresholdEvent(Y, ot.Less(), -3.0)
 >>> solver = ot.AbdoRackwitz()
->>> analytical = ot.FORM(solver, event, [50.0, 1.0, 10.0, 5.0])
+>>> solver.setStartingPoint(distribution.getMean())
+>>> analytical = ot.FORM(solver, event)
 >>> analytical.run()
 >>> analyticalResult = analytical.getResult()
 >>> algo = ot.PostAnalyticalImportanceSampling(analyticalResult)
