--- a/python/src/MultiFORM_doc.i.in
+++ b/python/src/MultiFORM_doc.i.in
@@ -33,9 +33,6 @@ solver : :class:`~openturns.OptimizationAlgorithm`
     Optimization algorithm used to search the design point.
 event : :class:`~openturns.RandomVector`
     Failure event
-physicalStartingPoint : sequence of float
-    Starting point of the optimization algorithm, declared in the physical
-    space.
 
 See also
 --------
@@ -51,8 +48,8 @@ Examples
 >>> Y = ot.CompositeRandomVector(f, X)
 >>> event = ot.ThresholdEvent(Y, ot.Less(), 0.0)
 >>> solver = ot.Cobyla()
->>> starting_pt = dist.getMean()
->>> algo = ot.MultiFORM(solver, event, starting_pt)
+>>> solver.setStartingPoint(dist.getMean())
+>>> algo = ot.MultiFORM(solver, event)
 >>> algo.run()
 >>> result = algo.getResult()
 >>> n_design_pts = len(result.getFORMResultCollection())
