--- a/python/src/SORM_doc.i.in
+++ b/python/src/SORM_doc.i.in
@@ -9,9 +9,6 @@ nearestPointAlgorithm : :class:`~openturns.OptimizationAlgorithm`
     Optimization algorithm used to search the design point.
 event : :class:`~openturns.RandomVector`
     Failure event.
-physicalStartingPoint : sequence of float
-    Starting point of the optimization algorithm, declared in the physical
-    space.
 
 Notes
 -----
@@ -103,7 +100,8 @@ Examples
 >>> event = ot.ThresholdEvent(output, ot.Less(), -3.0)
 >>> # We create an OptimizationAlgorithm algorithm
 >>> solver = ot.AbdoRackwitz()
->>> algo = ot.SORM(solver, event, [50.0, 1.0, 10.0, 5.0])
+>>> solver.setStartingPoint([50.0, 1.0, 10.0, 5.0])
+>>> algo = ot.SORM(solver, event)
 >>> algo.run()
 >>> result = algo.getResult()"
 
