--- a/python/src/StrongMaximumTest_doc.i.in
+++ b/python/src/StrongMaximumTest_doc.i.in
@@ -65,7 +65,9 @@ Examples
 >>> output = ot.CompositeRandomVector(myFunction, vect)
 >>> myEvent = ot.ThresholdEvent(output, ot.Less(), -3.0)
 >>> # FORM analyse to get the design point
->>> myAlgo = ot.FORM(ot.AbdoRackwitz(), myEvent, [50.0, 1.0, 10.0, 5.0])
+>>> solver = ot.AbdoRackwitz()
+>>> solver.setStartingPoint([50.0, 1.0, 10.0, 5.0])
+>>> myAlgo = ot.FORM(solver, myEvent)
 >>> myAlgo.run()
 >>> FORMresult = myAlgo.getResult()
 >>> designPoint = FORMresult.getStandardSpaceDesignPoint()
